# pkg-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  pytest.yaml
doc/: main.md  myst.yml
doc/api/source/: conf.py  index.rst
src/pkg_test_dprohe/: __init__.py
src/pkg_test_dprohe/core/: __init__.py  core_1.py  core_2.py
src/pkg_test_dprohe/extras/: __init__.py  extras_1.py  extras_2.py
tests/: test_core.py
