[project]
name = "pkg-test-dprohe"
version = "0.0.1"
authors = [
  { name="dprohe", email="dprohe@sandia.gov" },
]
description = "A package to learn CI/CD stuff, documentation, jupyter book, etc."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.optional-dependencies]
test = ["pytest","pytest-cov"]